Bug 1566316 - Make naturalWidth/naturalHeight on images honor orientation metadata. r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D65443